Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
OSK uses the "osk" mutex to ensure it is only started once. However the mutex is not created atomically, so it is possible for two instances to fail OpenMutex and reach the CreateMutex code path.
Instead, a single CreateMutex call should be used and its last error code checked to see whether the mutex previously existed.